using System.Collections;
using System.Collections.Generic;
using UnityEngine;

namespace Bridge.Sample1
{
    public abstract class Implementer
    {
        public abstract void Execute();
    }
}